Fix my videos buttons wrapping

--- a/client/src/app/shared/shared-video-miniature/videos-selection.component.scss
+++ b/client/src/app/shared/shared-video-miniature/videos-selection.component.scss
@@ -35,7 +35,7 @@
   }
 }
 
-@include on-mobile-main-col {
+@include on-small-main-col {
   .video {
     flex-wrap: wrap;
   }
